# IOSU

./: .editorconfig  .gitmodules  CMakeLists.txt  arm.toolchain.cmake  ios_mcp.cpp
aaa_notes/: NotesToSelf.md  Registers.md
ios_acp/: a_paths.txt
ios_bsp/: CMakeLists.txt  README  bsp_api.h  bsp_api_enum.h  bsp_hwrev.c  bsp_hwrev.h  bsp_hwrevs.c  bsp_hwrevs.h  bsp_internal.h  bsp_main.c  bsp_public_api.h  bsp_util.c  ipc.h
ios_bsp/entities/ccrh/: bsp_ccrh.c
ios_bsp/entities/di/: bsp_di.c
ios_bsp/entities/ee/: bsp_ee.c
ios_bsp/entities/gpio/: gpio.c
ios_bsp/entities/ppc/: bsp_ppc.c  bsp_ppc.h
ios_bsp/entities/reset/: bsp_reset.c
ios_bsp/entities/sdio/: bsp_sdio.c
ios_bsp/entities/si/: bsp_si.c
ios_bsp/entities/sys/: bsp_sys.c
ios_bsp/ios_api/: ios.h  ipc.h  syscalls.inc
ios_bsp/latte/: latte.h
ios_bsp/libraries/bc/: CMakeLists.txt  bc.c
ios_bsp/libraries/bc/include/: bc.h
ios_bsp/libraries/bsp_entity/: CMakeLists.txt  entity.c
ios_bsp/libraries/bsp_entity/include/: bsp_entity.h  bsp_entity_enum.h
ios_bsp/libraries/eeprom_drv/: CMakeLists.txt  eeprom.c  eeprom.h  eeprom_bits.c  eeprom_internal.h
ios_bsp/libraries/eeprom_drv/include/: eeprom.h
ios_bsp/libraries/log/: log.c
ios_nim_boss/: a_paths.txt
ios_usb/: usb_main.c
libraries/: CMakeLists.txt
libraries/bsp/: CMakeLists.txt  bsp.c
libraries/bsp/include/: bsp.h  bsp_hwrevs.h
libraries/crc32/: CMakeLists.txt  crc32.c
libraries/crc32/include/: crc32.h
libraries/ios_api/: CMakeLists.txt  syscalls.inc  syscalls.s
libraries/ios_api/include/ios_api/: ios.h  ipc.h  realview.h
libraries/libc/: CMakeLists.txt  README.md
libraries/libc/include/: _sprintf.h  delay.h  gctypes.h  string.h
libraries/libc/lib/: CMakeLists.txt  delay.c  sprintf.c  string.c
libraries/log/: CMakeLists.txt  log.c
libraries/log/include/: log.h
